--- a/dolla-landing-smooth-scroll/public/index.html
+++ b/dolla-landing-smooth-scroll/public/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&family=Raleway:wght@500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>dolla - Smooth Scroll</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
